bugfix/ETSL-807 changes for text alignment and arrow alignement

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs-swipper.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs-swipper.scss
@@ -424,6 +424,17 @@
 
     li {
       padding-left: 1.5rem;
+
+      @include respond-to-max($phone) {
+        padding-left: 0.5rem;
+      }
+    }
+
+    @include respond-to-max($phone) {
+      span.font-size--16 {
+        display: inline;
+        font-size: $font14;
+      }
     }
   }
 }
